# cspec

./: .gitignore  .travis.yml  Automation.v  Bytes.v  DecidableEquality.v  Disk.v  ExtractReplicatedDisk.v  Hoare.v  LICENSE  Makefile  Makefile.lab1  Makefile.lab2  Makefile.lab3  Mem.v  Prog.v  ProgTheorems.v  README-DeepSpec.md  README-old.md  README.concepts.md  README.concur  README.md  ReplicatedDisk.v  SequentialDisk.v  TODO  _CoqProject  _CoqProject.in  research.txt  sched.txt  update-coqproject.sh
.github/: mailbot.json
Refinement/: Disk.v  IO.v  Implements.v  SeqDiskAPI.v  SeqDiskImpl.v  TwoDiskAPI.v  TwoDiskImpl.v
Refinement/Implements/: IOcrash.v  IOstep.v  Implements.v
Shallow/: .dir-locals.el  Hoare.v  Interpret.v  Prog.v  ProgTheorems.v  ReplicatedDisk.v  SeqDiskProg.v  SequentialDisk.v  TwoDiskProg.v
Shallow/ProgLang/: Hoare.v  Prog.v  ProgTheorems.v
concur-test/: Extract.v  concur-test.cabal  stack.yaml
concur-test/lib/: Interpreter.hs  Main.hs
gomail/: gomail.go  mclnt.go  msrv.go
gomail/mclnt/: mclnt.go
gomail/msrv/: msrv.go  msrv_test.go
lec/: l01.txt  l02.txt  l03.txt  l04.txt
mail-cli/: Extract.v  fiximports.py  mail-cli.cabal  stack.yaml
mail-cli/lib/: Main.hs
mail-cli/lib/CLI/: Stubs.hs
mail-cli/lib/FS/: Ops.hs  State.hs
mail-test/: Extract.v  fiximports.py  mail-test.cabal  stack.yaml
mail-test/lib/: Interpreter.hs  Main.hs  POP3.hs  SMTP.hs  Support.hs
remap-nbd/: Extract.v  LICENSE  fiximports.py  hs.cabal  remap-nbd.cabal
remap-nbd/app/: Main.hs
remap-nbd/lib/: Main.hs
remap-nbd/lib/BadBlockDisk/: Env.hs  Ops.hs
remap-nbd/lib/BadSectorDisk/: Env.hs  Ops.hs
remap-nbd/lib/Network/: NBD.hs  ServerOps.hs
remap-nbd/lib/Utils/: Conversion.hs
remap-nbd/src/BadSectorDisk/: Env.hs  Ops.hs
remap-nbd/src/Network/: NBD.hs  ServerOps.hs
remap-nbd/src/Utils/: Conversion.hs
replicate-nbd/: .gitignore  Extract.v  README.md  fiximports.py  replicate-nbd.cabal
replicate-nbd/app/: Main.hs
replicate-nbd/lib/Network/: NBD.hs  ServerOps.hs
replicate-nbd/lib/Replication/: TwoDiskEnvironment.hs  TwoDiskOps.hs
replicate-nbd/src/: .gitignore  CoqUtils.hs
replicate-nbd/src/Interpreter/: TwoDisk.hs
replicate-nbd/src/Network/: NBD.hs  ServerOps.hs
replicate-nbd/src/Network/NBD/: Data.hs
replicate-nbd/src/Replication/: DiskOps.hs  Interpreter.hs  ReplicatedDiskImpl.hs  TwoDiskEnvironment.hs  TwoDiskOps.hs
replicate-nbd/src/Utils/: Conversion.hs  Coq.hs
scripts/: add-preprocess.sh  commenting.sh  mk-users.sh  mkclass.sh  mklab.pl  run-gomail.sh  run-mailserver.sh  run-postal-rabid.sh  run-postal.sh  run-rabid.sh
src/: Automation.v  Bytes.v  CSPEC.v  Disk.v  Ensemble.v  EqualDec.v  ExtrBytes.v  GenericDisk.v  Helpers.v  MaybeHolds.v  Nonempty.v  POCS.v  SepLogic.v
src/AtomicPair/: AtomicPairAPI.v  AtomicPairImpl.v
src/BadSectorDisk/: BadSectorAPI.v  BadSectorImpl.v  ExtrBadSectorDisk.v
src/Common/: NbdAPI.v  NbdImpl.v  NbdServer.v  OneDiskAPI.v
src/DS/: Counter.v
src/Disk/: AsyncDisk.v  Blocks.v  Disk.v  GenericDisk.v  Sectors.v  SimpleDisk.v
src/Examples/: LockedCounter.v
src/FS/: ConcurTest.v  ExampleTrees.v  FSAPI.v  FSImpl.v  FSModel.v  LinkAPI.v  MailServer.v  MailServerAPI.v  MailServerAtomic.v  MailServerImpl.v  MailServerLayers.v  MailServerOld.v  MailServerProto.v  Trees.v
src/Helpers/: Automation.v  BooleanAlgebra.v  Disk.v  ExtrBytes.v  FinMap.v  FunMap.v  Helpers.v  Instances.v  KleeneAlgebra.v  KleeneStar.v  Learn.v  ListStuff.v  Maps.v  Ordering.v  ProofAutomation.v  RecordSet.v  Setoid.v  Sets.v  Sorting.v  TSO.v  TransitionSystem.v  Varmap.v
src/Lab0/: README.md  btree.v  compare.v
src/Lab1/: StatDbAPI.v  StatDbCli.v  StatDbImpl.v  VariablesAPI.v  VariablesImpl.v
src/Lab2/: BadBlockAPI.v  BadBlockImpl.v  BadSectorAPI.v  BadSectorImpl.v  RemappedDiskImpl.v  RemappedServer.v
src/Lab3/: AtomicPairAPI.v  AtomicPairImpl.v
src/Lab4/: ReplicatedDiskImpl.v  ReplicatedServer.v  TwoDiskAPI.v  TwoDiskBaseAPI.v  TwoDiskBaseImpl.v  TwoDiskImpl.v
src/Mail/: DeliverAPI.v  DeliverImpl.v  DeliverListTidAPI.v  DeliverListTidImpl.v  LinkRetryImpl.v  MailFSAPI.v  MailFSImpl.v  MailFSMergedAPI.v  MailFSMergedImpl.v  MailFSPathAPI.v  MailFSPathAbsAPI.v  MailFSPathAbsImpl.v  MailFSPathImpl.v  MailFSStringAPI.v  MailFSStringAbsAPI.v  MailFSStringAbsImpl.v  MailFSStringImpl.v  MailServer.v  MailServerAPI.v  MailServerComposedAPI.v  MailServerComposedImpl.v  MailServerLockAbsAPI.v  MailServerLockAbsImpl.v  MailboxAPI.v  MailboxImpl.v  MailboxTmpAbsAPI.v  MailboxTmpAbsImpl.v  TryDeliverAPI.v  TryDeliverImpl.v
src/Mail2/: AtomicReadImpl.v  CreateAPI.v  DeliverAPI.v  DeliverImpl.v  DeliverListTidAPI.v  DeliverListTidImpl.v  FSSimpleAPI.v  FSSimpleImpl.v  FindAvailableImpl.v  LinkRetryImpl.v  MailFSAPI.v  MailFSImpl.v  MailFSMergedAPI.v  MailFSMergedImpl.v  MailFSPathAPI.v  MailFSPathAbsAPI.v  MailFSPathAbsImpl.v  MailFSPathImpl.v  MailFSStringAPI.v  MailFSStringAbsAPI.v  MailFSStringAbsImpl.v  MailFSStringImpl.v  MailServer.v  MailServerAPI.v  MailServerComposedAPI.v  MailServerDirAPI.v  MailServerDirImpl.v  MailServerHAPI.v  MailServerLockAbsAPI.v  MailServerLockAbsImpl.v  MailboxAPI.v  MailboxImpl.v  MailboxTmpAbsAPI.v  MailboxTmpAbsImpl.v  TryDeliverAPI.v  TryDeliverImpl.v
src/NBD/: ExtrServer.v  NbdAPI.v  NbdData.v  NbdImpl.v  NbdServer.v  Server.v
src/OneDisk/: ExtrOneDisk.v  OneDiskAPI.v
src/Refinement/: ExtrProg.v  ExtrTwoDiskImpl.v  Hoare.v  HoareRecovery.v  Interface.v  NoCrashes.v  Proc.v  ProcTheorems.v  Prog.v  ProgLang.v  ProgTheorems.v  ReplicatedDisk.v  SeqDiskAPI.v  SeqDiskImpl.v  TwoDiskAPI.v  TwoDiskImpl.v  TwoDiskProgTheorems.v
src/RemappedDisk/: RemappedDiskAPI.v  RemappedDiskImpl.v  Server.v
src/ReplicatedDisk/: ReplicatedDiskAPI.v  ReplicatedDiskImpl.v  ReplicatedServer.v  (+2 more)
statdb-cli/: Extract.v  fiximports.py  hs.cabal  stack.yaml  statdb-cli.cabal
statdb-cli/app/: Main.hs
statdb-cli/lib/: Main.hs
statdb-cli/lib/CLI/: Stubs.hs
statdb-cli/lib/Variables/: Env.hs  Ops.hs  State.hs
statdb-cli/src/CLI/: Stubs.hs
statdb-cli/src/Variables/: Env.hs  Ops.hs
(+173 files in other folders)
