name:                concur-test
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable concur-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      extract, lib
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , mtl
                     , bytestring
                     , atomic-primops
  other-modules:       Bool
                     , Interpreter
                     , Compile
                     , CompileLoop
                     , ConcurProc
                     , List
                     , Datatypes
                     , Example2
                     , Nat
                     , Helpers
  default-language:    Haskell2010
