name:                mail-cli
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable mail-cli
  hs-source-dirs:      extract, lib
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , mtl
                     , bytestring
                     , unix
                     , containers
  other-modules:       Abstraction
                     , Bool
                     , CLI.Stubs
                     , Datatypes
                     , Helpers
                     , Logic
                     , Proc
                     , MailServerAPI
                     , MailCli
                     , FS.State
                     , FS.Ops
                     , FSAPI
                     , FSImpl
                     , Def
  default-language:    Haskell2010
