name:                mail-test
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable mail-test
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      extract, lib
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , mtl
                     , bytestring
                     , atomic-primops
  other-modules:       Interpreter
                     , Compile
                     , ConcurProc
                     , List
                     , Datatypes
                     , MailServer
                     , Helpers
  default-language:    Haskell2010
