name:                mail-test
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable mail-test
  ghc-options:         -O2 -rtsopts
  extensions:          OverloadedStrings
  hs-source-dirs:      extract, lib
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , mtl
                     , bytestring
                     , atomic-primops
                     , unix
                     , directory
                     , random
                     , rdtsc
                     , flock
                     , network
                     , deepseq
                     , split
  other-modules:       Interpreter
                     , Compile
                     , ConcurProc
                     , List
                     , Datatypes
                     , MailServer
  default-language:    Haskell2010
