name:                replicate-nbd
version:             0.1.0.0
synopsis:            Replicated NBD server
description:         Network block device server that replicates requests over two disks, supporting whole disk failures. The core implementation is extracted from Coq.
homepage:            https://github.com/mit-pdos/6.826-labs
license:             BSD3
license-file:        LICENSE
author:              Tej Chajed
maintainer:          tchajed@mit.edu
copyright:           2017 Tej Chajed
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ReplicatedDisk
                     , Network.NBD
  other-modules:       Utils.Conversion
                     , Replication.ReplicatedDiskImpl
                     , Replication.TwoDiskOps
                     , Replication.TwoDiskEnvironment
                     , Network.NBD.Data
                     , Network.ServerOps
                     , ArrayAPI
                     , Bytes
                     , Datatypes
                     , Def
                     , Disk
                     , DiskSize
                     , EquivDec
                     , Hoare
                     , Init
                     , Interface
                     , NbdData
                     , Prog
                     , ReadWrite
                     , Recovery
                     , SeqDiskAPI
                     , Server
                     , Specif
                     , TwoDiskAPI
                     , TwoDiskImpl
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , bytestring
                     , conduit-extra
                     , conduit-combinators
                     , cereal
                     , cereal-conduit
                     , directory
                     , mtl
                     , unix
                     , unix-bytestring
  default-language:    Haskell2010

executable replicate-nbd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , replicate-nbd
                     , directory
                     , optparse-applicative
  default-language:    Haskell2010

test-suite replicate-nbd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , replicate-nbd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mit-pdos/6.826-labs
